[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "i2c"
version = "0.1.0"

[dependencies]
aux14 = { path = "auxiliary" }
futures = { version = "0.3.5", default-features = false }
pin-utils = "0.1.0"
m = "0.1.1"
f3 = "0.6.1"
either = { version = "1.6.0", default-features = false }
