[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
edition = "2018"
name = "i2c"
version = "0.1.0"

[dependencies]
aux14 = { path = "auxiliary" }
either = { version = "1.6.0", default-features = false }
f3 = "0.6.1"
futures = { version = "0.3.5", default-features = false }
m = "0.1.1"
pin-utils = "0.1.0"
spin_on = "0.1.0"
rand = { version = "0.7.3", features = ["small_rng"], default-features = false }
